Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/defaultMethods/Neg01.out
Neg01.java:14:12: compiler.err.types.incompatible: Neg01.IA, Neg01.IB, (compiler.misc.incompatible.unrelated.defaults: kindname.class, Neg01.AB, m, , Neg01.IA, Neg01.IB)
1 error
